@@ -172,6 +172,8 @@ Bug fixes:
 - "storage get" no longer requires AI to be enabled.
 - Fixed PM list synchronization bug.
 - Fix attackAuto_onlyWhenSafe: ignore party members.
+- If itemsGatherAuto is 1, don't gather items while walking towards a
+  monster, or when there are aggressive monsters on screen.
 
 Internal:
 - findIndex() and related functions are now much faster (bug #16).
